--- a/less/theme.less
+++ b/less/theme.less
@@ -168,6 +168,7 @@ margin: 0 auto;
         color: @white;
         text-decoration: none;
         background: transparent;
+        padding: 9px;
     }
     .fa{
         transition: color .3s ease-in-out;
